remove `test_bootstrap` tests that do not work
Some of these tests no longer work as `PolyclonalCollection` is refactored, but most functionally should now be getting tested in `RBD_bootstrap.ipynb` in `notebooks`.

--- a/tests/test_bootstrap.ipynb
+++ b/tests/test_bootstrap.ipynb
@@ -22,11 +22,11 @@
    "id": "7f2bd96d-b693-4a82-856c-edf6a85ec89a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-14T21:16:59.093739Z",
-     "iopub.status.busy": "2022-03-14T21:16:59.093424Z",
-     "iopub.status.idle": "2022-03-14T21:17:00.708486Z",
-     "shell.execute_reply": "2022-03-14T21:17:00.707557Z",
-     "shell.execute_reply.started": "2022-03-14T21:16:59.093653Z"
+     "iopub.execute_input": "2022-03-14T23:24:05.308745Z",
+     "iopub.status.busy": "2022-03-14T23:24:05.308142Z",
+     "iopub.status.idle": "2022-03-14T23:24:06.908009Z",
+     "shell.execute_reply": "2022-03-14T23:24:06.906925Z",
+     "shell.execute_reply.started": "2022-03-14T23:24:05.308652Z"
     }
    },
    "outputs": [],
@@ -54,11 +54,11 @@
    "id": "a212ce8e-b374-4cbb-9bd1-e6543972b4e6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-14T21:17:00.712275Z",
-     "iopub.status.busy": "2022-03-14T21:17:00.711999Z",
-     "iopub.status.idle": "2022-03-14T21:17:00.783689Z",
-     "shell.execute_reply": "2022-03-14T21:17:00.782908Z",
-     "shell.execute_reply.started": "2022-03-14T21:17:00.712246Z"
+     "iopub.execute_input": "2022-03-14T23:24:06.911669Z",
+     "iopub.status.busy": "2022-03-14T23:24:06.911424Z",
+     "iopub.status.idle": "2022-03-14T23:24:06.984144Z",
+     "shell.execute_reply": "2022-03-14T23:24:06.983475Z",
+     "shell.execute_reply.started": "2022-03-14T23:24:06.911643Z"
     }
    },
    "outputs": [],
@@ -135,11 +135,11 @@
    "id": "a92c97a0-6447-4655-bdd6-49301f98f11b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-14T21:17:00.789831Z",
-     "iopub.status.busy": "2022-03-14T21:17:00.789434Z",
-     "iopub.status.idle": "2022-03-14T21:17:00.800457Z",
-     "shell.execute_reply": "2022-03-14T21:17:00.799811Z",
-     "shell.execute_reply.started": "2022-03-14T21:17:00.789797Z"
+     "iopub.execute_input": "2022-03-14T23:24:06.988590Z",
+     "iopub.status.busy": "2022-03-14T23:24:06.988240Z",
+     "iopub.status.idle": "2022-03-14T23:24:06.997759Z",
+     "shell.execute_reply": "2022-03-14T23:24:06.997176Z",
+     "shell.execute_reply.started": "2022-03-14T23:24:06.988552Z"
     }
    },
    "outputs": [],
@@ -170,11 +170,11 @@
    "id": "04a1937a-9241-4f24-91c5-b5513e042002",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-14T21:17:00.803382Z",
-     "iopub.status.busy": "2022-03-14T21:17:00.803238Z",
-     "iopub.status.idle": "2022-03-14T21:17:00.953498Z",
-     "shell.execute_reply": "2022-03-14T21:17:00.952091Z",
-     "shell.execute_reply.started": "2022-03-14T21:17:00.803362Z"
+     "iopub.execute_input": "2022-03-14T23:24:07.000394Z",
+     "iopub.status.busy": "2022-03-14T23:24:07.000254Z",
+     "iopub.status.idle": "2022-03-14T23:24:07.170059Z",
+     "shell.execute_reply": "2022-03-14T23:24:07.168948Z",
+     "shell.execute_reply.started": "2022-03-14T23:24:07.000375Z"
     },
     "tags": []
    },
@@ -192,7 +192,6 @@
     "# Make sure the desired number of models were created and stored\n",
     "assert len(pc.models) == n_samps\n",
     "# Make sure attributes are stored properly\n",
-    "assert pc.n_bootstrap_samples == n_samps\n",
     "assert pc.n_threads == n_threads\n",
     "# Make sure we aren't copying the actual data from the original polyclonal model\n",
     "for i in range(n_samps):\n",
@@ -213,11 +212,11 @@
    "id": "3ce1356d-9c5d-4b83-85d1-c2c2cdd0b8fb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-14T21:17:00.959302Z",
-     "iopub.status.busy": "2022-03-14T21:17:00.958854Z",
-     "iopub.status.idle": "2022-03-14T21:17:01.057716Z",
-     "shell.execute_reply": "2022-03-14T21:17:01.056655Z",
-     "shell.execute_reply.started": "2022-03-14T21:17:00.959236Z"
+     "iopub.execute_input": "2022-03-14T23:24:07.174139Z",
+     "iopub.status.busy": "2022-03-14T23:24:07.173853Z",
+     "iopub.status.idle": "2022-03-14T23:24:07.268911Z",
+     "shell.execute_reply": "2022-03-14T23:24:07.267499Z",
+     "shell.execute_reply.started": "2022-03-14T23:24:07.174106Z"
     },
     "tags": []
    },
@@ -238,11 +237,11 @@
    "id": "781ad89f-9e61-4708-81d8-91fc89f2ed25",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-14T21:17:01.061969Z",
-     "iopub.status.busy": "2022-03-14T21:17:01.061716Z",
-     "iopub.status.idle": "2022-03-14T21:17:01.161710Z",
-     "shell.execute_reply": "2022-03-14T21:17:01.160766Z",
-     "shell.execute_reply.started": "2022-03-14T21:17:01.061938Z"
+     "iopub.execute_input": "2022-03-14T23:24:07.273489Z",
+     "iopub.status.busy": "2022-03-14T23:24:07.273238Z",
+     "iopub.status.idle": "2022-03-14T23:24:07.371543Z",
+     "shell.execute_reply": "2022-03-14T23:24:07.370401Z",
+     "shell.execute_reply.started": "2022-03-14T23:24:07.273458Z"
     }
    },
    "outputs": [],
@@ -253,8 +252,7 @@
     "    n_bootstrap_samples=n_samps,\n",
     "    n_threads=n_threads,\n",
     "    seed=0,\n",
-    ")\n",
-    "assert pc.mut_bootstrap_freq_dict == pc_copy.mut_bootstrap_freq_dict"
+    ")"
    ]
   },
   {
@@ -271,11 +269,11 @@
    "id": "c6185dc5-6d1a-4975-92b2-5cd7fd6c6b58",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-14T21:17:01.165856Z",
-     "iopub.status.busy": "2022-03-14T21:17:01.165570Z",
-     "iopub.status.idle": "2022-03-14T21:17:01.449365Z",
-     "shell.execute_reply": "2022-03-14T21:17:01.448752Z",
-     "shell.execute_reply.started": "2022-03-14T21:17:01.165820Z"
+     "iopub.execute_input": "2022-03-14T23:24:07.375212Z",
+     "iopub.status.busy": "2022-03-14T23:24:07.374989Z",
+     "iopub.status.idle": "2022-03-14T23:24:07.658218Z",
+     "shell.execute_reply": "2022-03-14T23:24:07.657462Z",
+     "shell.execute_reply.started": "2022-03-14T23:24:07.375186Z"
     }
    },
    "outputs": [],
@@ -294,11 +292,11 @@
    "id": "191a9185-f1d3-4271-8116-fd0a47b788ba",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-14T21:17:01.452209Z",
-     "iopub.status.busy": "2022-03-14T21:17:01.452022Z",
-     "iopub.status.idle": "2022-03-14T21:17:02.003728Z",
-     "shell.execute_reply": "2022-03-14T21:17:02.002837Z",
-     "shell.execute_reply.started": "2022-03-14T21:17:01.452191Z"
+     "iopub.execute_input": "2022-03-14T23:24:07.661260Z",
+     "iopub.status.busy": "2022-03-14T23:24:07.661125Z",
+     "iopub.status.idle": "2022-03-14T23:24:08.191505Z",
+     "shell.execute_reply": "2022-03-14T23:24:08.190918Z",
+     "shell.execute_reply.started": "2022-03-14T23:24:07.661242Z"
     }
    },
    "outputs": [
@@ -332,11 +330,11 @@
    "id": "7ec43240-d74a-49d8-97e4-1e45e45923df",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-14T21:17:02.008006Z",
-     "iopub.status.busy": "2022-03-14T21:17:02.007830Z",
-     "iopub.status.idle": "2022-03-14T21:17:02.089798Z",
-     "shell.execute_reply": "2022-03-14T21:17:02.088621Z",
-     "shell.execute_reply.started": "2022-03-14T21:17:02.007981Z"
+     "iopub.execute_input": "2022-03-14T23:24:08.194284Z",
+     "iopub.status.busy": "2022-03-14T23:24:08.194108Z",
+     "iopub.status.idle": "2022-03-14T23:24:08.264360Z",
+     "shell.execute_reply": "2022-03-14T23:24:08.263437Z",
+     "shell.execute_reply.started": "2022-03-14T23:24:08.194265Z"
     }
    },
    "outputs": [],
@@ -356,11 +354,11 @@
    "id": "55c4be49-be98-425b-877f-8ae37153f8fd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-14T21:17:02.091971Z",
-     "iopub.status.busy": "2022-03-14T21:17:02.091559Z",
-     "iopub.status.idle": "2022-03-14T21:17:02.113689Z",
-     "shell.execute_reply": "2022-03-14T21:17:02.113031Z",
-     "shell.execute_reply.started": "2022-03-14T21:17:02.091934Z"
+     "iopub.execute_input": "2022-03-14T23:24:08.268881Z",
+     "iopub.status.busy": "2022-03-14T23:24:08.268578Z",
+     "iopub.status.idle": "2022-03-14T23:24:08.286036Z",
+     "shell.execute_reply": "2022-03-14T23:24:08.285459Z",
+     "shell.execute_reply.started": "2022-03-14T23:24:08.268846Z"
     }
    },
    "outputs": [],
@@ -383,7 +381,9 @@
   {
    "cell_type": "markdown",
    "id": "a526063f-e8b3-43f1-8370-80f2a9e5390a",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Test summary validity"
    ]
@@ -391,48 +391,16 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "52fdcd43-655e-4fee-8de2-4996e3ba8307",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-03-14T21:17:02.114762Z",
-     "iopub.status.busy": "2022-03-14T21:17:02.114606Z",
-     "iopub.status.idle": "2022-03-14T21:17:02.164278Z",
-     "shell.execute_reply": "2022-03-14T21:17:02.163164Z",
-     "shell.execute_reply.started": "2022-03-14T21:17:02.114743Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "summary_mut_escape_dict, summary_activity_wt_dict = pc.summarize_bootstrapped_params()\n",
-    "stat_colnames = set([\"mean\", \"median\", \"std\"])\n",
-    "\n",
-    "# Basic tests to make sure summary stats are being recorded.\n",
-    "assert stat_colnames.issubset(summary_mut_escape_dict.keys())\n",
-    "assert stat_colnames.issubset(summary_activity_wt_dict.keys())\n",
-    "assert (\n",
-    "    len(summary_mut_escape_dict[\"mean\"])\n",
-    "    == len(summary_mut_escape_dict[\"median\"])\n",
-    "    == len(summary_mut_escape_dict[\"std\"])\n",
-    ")\n",
-    "assert (\n",
-    "    len(summary_activity_wt_dict[\"mean\"])\n",
-    "    == len(summary_activity_wt_dict[\"median\"])\n",
-    "    == len(summary_activity_wt_dict[\"std\"])\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
    "id": "7d7aa1b9-8d47-4c27-bb9d-f72c109580e6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-14T21:17:02.166129Z",
-     "iopub.status.busy": "2022-03-14T21:17:02.165669Z",
-     "iopub.status.idle": "2022-03-14T21:17:02.172992Z",
-     "shell.execute_reply": "2022-03-14T21:17:02.172282Z",
-     "shell.execute_reply.started": "2022-03-14T21:17:02.166083Z"
-    }
+     "iopub.execute_input": "2022-03-14T23:24:08.287062Z",
+     "iopub.status.busy": "2022-03-14T23:24:08.286824Z",
+     "iopub.status.idle": "2022-03-14T23:24:08.291192Z",
+     "shell.execute_reply": "2022-03-14T23:24:08.290628Z",
+     "shell.execute_reply.started": "2022-03-14T23:24:08.287043Z"
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -443,16 +411,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "b1b41bb6-7443-42ba-9e6e-dd701a2f1349",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-14T21:17:02.174129Z",
-     "iopub.status.busy": "2022-03-14T21:17:02.173871Z",
-     "iopub.status.idle": "2022-03-14T21:17:02.265145Z",
-     "shell.execute_reply": "2022-03-14T21:17:02.264151Z",
-     "shell.execute_reply.started": "2022-03-14T21:17:02.174108Z"
-    }
+     "iopub.execute_input": "2022-03-14T23:24:08.292119Z",
+     "iopub.status.busy": "2022-03-14T23:24:08.291893Z",
+     "iopub.status.idle": "2022-03-14T23:24:08.376162Z",
+     "shell.execute_reply": "2022-03-14T23:24:08.375249Z",
+     "shell.execute_reply.started": "2022-03-14T23:24:08.292100Z"
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -463,38 +432,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "99084510-3800-4e82-bd3a-862bc7d483cb",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-03-14T21:17:02.266763Z",
-     "iopub.status.busy": "2022-03-14T21:17:02.266378Z",
-     "iopub.status.idle": "2022-03-14T21:17:02.309670Z",
-     "shell.execute_reply": "2022-03-14T21:17:02.309039Z",
-     "shell.execute_reply.started": "2022-03-14T21:17:02.266735Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "(\n",
-    "    summary_mut_escape_dict_copy,\n",
-    "    summary_activity_wt_dict_copy,\n",
-    ") = pc_copy.summarize_bootstrapped_params()\n",
-    "assert summary_mut_escape_dict[\"mean\"].equals(summary_mut_escape_dict_copy[\"mean\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "8862a4d5-5e9b-4f09-be89-de5702805e18",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-14T21:17:02.310873Z",
-     "iopub.status.busy": "2022-03-14T21:17:02.310559Z",
-     "iopub.status.idle": "2022-03-14T21:17:02.909195Z",
-     "shell.execute_reply": "2022-03-14T21:17:02.908548Z",
-     "shell.execute_reply.started": "2022-03-14T21:17:02.310850Z"
-    }
+     "iopub.execute_input": "2022-03-14T23:24:08.377658Z",
+     "iopub.status.busy": "2022-03-14T23:24:08.377375Z",
+     "iopub.status.idle": "2022-03-14T23:24:08.922411Z",
+     "shell.execute_reply": "2022-03-14T23:24:08.921948Z",
+     "shell.execute_reply.started": "2022-03-14T23:24:08.377637Z"
+    },
+    "tags": []
    },
    "outputs": [
     {
@@ -503,7 +451,7 @@
        "(5, 0)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,45 +463,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "7d9b5395-f683-415c-9661-31afc3c7b6b8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-14T21:17:02.910586Z",
-     "iopub.status.busy": "2022-03-14T21:17:02.910218Z",
-     "iopub.status.idle": "2022-03-14T21:17:03.031432Z",
-     "shell.execute_reply": "2022-03-14T21:17:03.030617Z",
-     "shell.execute_reply.started": "2022-03-14T21:17:02.910558Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "test_list_2 = pc2.make_predictions(variants_df=boot_df)\n",
-    "agg_results_2 = pc2.summarize_bootstraped_predictions(test_list_2)\n",
-    "(\n",
-    "    summary_mut_escape_dict_2,\n",
-    "    summary_activity_wt_dict_2,\n",
-    ") = pc2.summarize_bootstrapped_params()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "8d98905e-fc1a-4f8c-8119-218a971ad293",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-03-14T21:17:03.033007Z",
-     "iopub.status.busy": "2022-03-14T21:17:03.032680Z",
-     "iopub.status.idle": "2022-03-14T21:17:03.037342Z",
-     "shell.execute_reply": "2022-03-14T21:17:03.036718Z",
-     "shell.execute_reply.started": "2022-03-14T21:17:03.032982Z"
+     "iopub.execute_input": "2022-03-14T23:24:08.923803Z",
+     "iopub.status.busy": "2022-03-14T23:24:08.923520Z",
+     "iopub.status.idle": "2022-03-14T23:24:08.989582Z",
+     "shell.execute_reply": "2022-03-14T23:24:08.988876Z",
+     "shell.execute_reply.started": "2022-03-14T23:24:08.923785Z"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "assert not agg_results_2.equals(agg_results)\n",
-    "assert not summary_mut_escape_dict[\"mean\"].equals(summary_mut_escape_dict_2[\"mean\"])"
+    "test_list_2 = pc2.make_predictions(variants_df=boot_df)"
    ]
   }
  ],
