ignore stderr in notebook on Travis

--- a/notebooks/RBD_bootstrap.ipynb
+++ b/notebooks/RBD_bootstrap.ipynb
@@ -188,6 +188,8 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
+    "\n",
     "import pickle\n",
     "\n",
     "with open(\"fit_RBD_model.pickle\", \"rb\") as f:\n",
