shorten output to try to pass tests

--- a/notebooks/RBD_bootstrap.ipynb
+++ b/notebooks/RBD_bootstrap.ipynb
@@ -34,11 +34,11 @@
    "id": "e243e290-8060-453d-ac3f-cb071681a22b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-15T17:52:38.431374Z",
-     "iopub.status.busy": "2022-03-15T17:52:38.431106Z",
-     "iopub.status.idle": "2022-03-15T17:52:39.852701Z",
-     "shell.execute_reply": "2022-03-15T17:52:39.851959Z",
-     "shell.execute_reply.started": "2022-03-15T17:52:38.431300Z"
+     "iopub.execute_input": "2022-03-15T18:19:08.144584Z",
+     "iopub.status.busy": "2022-03-15T18:19:08.144034Z",
+     "iopub.status.idle": "2022-03-15T18:19:10.122901Z",
+     "shell.execute_reply": "2022-03-15T18:19:10.122408Z",
+     "shell.execute_reply.started": "2022-03-15T18:19:08.144434Z"
     },
     "tags": []
    },
@@ -157,11 +157,11 @@
    "id": "4388c779-0811-426e-a095-8e7d1a08eff2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-15T17:52:39.856365Z",
-     "iopub.status.busy": "2022-03-15T17:52:39.856139Z",
-     "iopub.status.idle": "2022-03-15T17:52:42.035120Z",
-     "shell.execute_reply": "2022-03-15T17:52:42.033994Z",
-     "shell.execute_reply.started": "2022-03-15T17:52:39.856342Z"
+     "iopub.execute_input": "2022-03-15T18:19:10.125822Z",
+     "iopub.status.busy": "2022-03-15T18:19:10.125622Z",
+     "iopub.status.idle": "2022-03-15T18:19:12.736534Z",
+     "shell.execute_reply": "2022-03-15T18:19:12.733840Z",
+     "shell.execute_reply.started": "2022-03-15T18:19:10.125801Z"
     },
     "tags": []
    },
@@ -191,11 +191,11 @@
    "id": "088aa0ad-29cf-414d-9192-34aaffcaf115",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-15T17:52:42.051737Z",
-     "iopub.status.busy": "2022-03-15T17:52:42.051258Z",
-     "iopub.status.idle": "2022-03-15T17:54:55.767391Z",
-     "shell.execute_reply": "2022-03-15T17:54:55.766553Z",
-     "shell.execute_reply.started": "2022-03-15T17:52:42.051688Z"
+     "iopub.execute_input": "2022-03-15T18:19:12.749623Z",
+     "iopub.status.busy": "2022-03-15T18:19:12.748905Z",
+     "iopub.status.idle": "2022-03-15T18:21:24.561672Z",
+     "shell.execute_reply": "2022-03-15T18:21:24.559515Z",
+     "shell.execute_reply.started": "2022-03-15T18:19:12.749403Z"
     },
     "tags": []
    },
@@ -204,8 +204,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting fitting bootstrap models at Tue Mar 15 10:52:42 2022\n",
-      "Fitting took 134 seconds, finished at Tue Mar 15 10:54:55 2022\n"
+      "Starting fitting bootstrap models at Tue Mar 15 11:19:12 2022\n",
+      "Fitting took 132 seconds, finished at Tue Mar 15 11:21:24 2022\n"
      ]
     }
    ],
@@ -238,11 +238,11 @@
    "id": "3992ec56-9e80-40a8-a626-8de0fedf3625",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-15T17:54:55.771390Z",
-     "iopub.status.busy": "2022-03-15T17:54:55.771161Z",
-     "iopub.status.idle": "2022-03-15T17:54:55.790558Z",
-     "shell.execute_reply": "2022-03-15T17:54:55.789901Z",
-     "shell.execute_reply.started": "2022-03-15T17:54:55.771369Z"
+     "iopub.execute_input": "2022-03-15T18:21:24.567842Z",
+     "iopub.status.busy": "2022-03-15T18:21:24.567550Z",
+     "iopub.status.idle": "2022-03-15T18:21:24.592476Z",
+     "shell.execute_reply": "2022-03-15T18:21:24.591982Z",
+     "shell.execute_reply.started": "2022-03-15T18:21:24.567808Z"
     },
     "tags": []
    },
@@ -342,11 +342,11 @@
    "id": "3b0e02c8-91a5-4876-8970-6905a0f6533c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-15T17:54:55.793457Z",
-     "iopub.status.busy": "2022-03-15T17:54:55.793269Z",
-     "iopub.status.idle": "2022-03-15T17:54:55.817187Z",
-     "shell.execute_reply": "2022-03-15T17:54:55.816562Z",
-     "shell.execute_reply.started": "2022-03-15T17:54:55.793438Z"
+     "iopub.execute_input": "2022-03-15T18:21:24.595622Z",
+     "iopub.status.busy": "2022-03-15T18:21:24.595411Z",
+     "iopub.status.idle": "2022-03-15T18:21:24.618590Z",
+     "shell.execute_reply": "2022-03-15T18:21:24.618040Z",
+     "shell.execute_reply.started": "2022-03-15T18:21:24.595600Z"
     },
     "tags": []
    },
@@ -434,11 +434,11 @@
    "id": "0f9c74e6-54dd-422b-86ca-cf294df8b28a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-15T17:54:55.820374Z",
-     "iopub.status.busy": "2022-03-15T17:54:55.820049Z",
-     "iopub.status.idle": "2022-03-15T17:54:56.095815Z",
-     "shell.execute_reply": "2022-03-15T17:54:56.094892Z",
-     "shell.execute_reply.started": "2022-03-15T17:54:55.820350Z"
+     "iopub.execute_input": "2022-03-15T18:21:24.621594Z",
+     "iopub.status.busy": "2022-03-15T18:21:24.621306Z",
+     "iopub.status.idle": "2022-03-15T18:21:24.861066Z",
+     "shell.execute_reply": "2022-03-15T18:21:24.860298Z",
+     "shell.execute_reply.started": "2022-03-15T18:21:24.621467Z"
     },
     "tags": []
    },
@@ -562,11 +562,11 @@
    "id": "9d4438ce-98b4-40de-b1c1-331e7b68e7a3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-15T17:54:56.102591Z",
-     "iopub.status.busy": "2022-03-15T17:54:56.101883Z",
-     "iopub.status.idle": "2022-03-15T17:54:56.319265Z",
-     "shell.execute_reply": "2022-03-15T17:54:56.318606Z",
-     "shell.execute_reply.started": "2022-03-15T17:54:56.102544Z"
+     "iopub.execute_input": "2022-03-15T18:21:24.865984Z",
+     "iopub.status.busy": "2022-03-15T18:21:24.865764Z",
+     "iopub.status.idle": "2022-03-15T18:21:25.118305Z",
+     "shell.execute_reply": "2022-03-15T18:21:25.117814Z",
+     "shell.execute_reply.started": "2022-03-15T18:21:24.865958Z"
     },
     "tags": []
    },
@@ -644,32 +644,6 @@
        "      <td>10</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>331</td>\n",
-       "      <td>N</td>\n",
-       "      <td>F</td>\n",
-       "      <td>N331F</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>331</td>\n",
-       "      <td>N</td>\n",
-       "      <td>G</td>\n",
-       "      <td>N331G</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -679,15 +653,11 @@
        "0       1   331        N      A    N331A   0.2     0.1  0.2   \n",
        "1       1   331        N      D    N331D   0.4     0.3  0.4   \n",
        "2       1   331        N      E    N331E  -0.0    -0.1  0.3   \n",
-       "3       1   331        N      F    N331F   0.3     0.2  0.4   \n",
-       "4       1   331        N      G    N331G   1.8     1.8  0.4   \n",
        "\n",
        "   n_bootstrap_replicates  frac_bootstrap_replicates  \n",
        "0                      10                        1.0  \n",
        "1                      10                        1.0  \n",
-       "2                      10                        1.0  \n",
-       "3                      10                        1.0  \n",
-       "4                      10                        1.0  "
+       "2                      10                        1.0  "
       ]
      },
      "execution_count": 7,
@@ -696,7 +666,7 @@
     }
    ],
    "source": [
-    "bootstrap_poly.mut_escape_df.round(1).head()"
+    "bootstrap_poly.mut_escape_df.round(1).head(n=3)"
    ]
   },
   {
@@ -713,11 +683,11 @@
    "id": "cefd6935-a4d1-436d-95ea-c20777ec10fc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-15T17:54:56.322647Z",
-     "iopub.status.busy": "2022-03-15T17:54:56.322431Z",
-     "iopub.status.idle": "2022-03-15T17:54:56.617649Z",
-     "shell.execute_reply": "2022-03-15T17:54:56.616775Z",
-     "shell.execute_reply.started": "2022-03-15T17:54:56.322628Z"
+     "iopub.execute_input": "2022-03-15T18:21:25.120561Z",
+     "iopub.status.busy": "2022-03-15T18:21:25.120395Z",
+     "iopub.status.idle": "2022-03-15T18:21:25.430913Z",
+     "shell.execute_reply": "2022-03-15T18:21:25.430436Z",
+     "shell.execute_reply.started": "2022-03-15T18:21:25.120542Z"
     },
     "tags": []
    },
@@ -860,11 +830,11 @@
    "id": "f4385713-9c73-4ddc-af36-2fe402e4b136",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-15T17:54:56.622395Z",
-     "iopub.status.busy": "2022-03-15T17:54:56.622025Z",
-     "iopub.status.idle": "2022-03-15T17:54:56.991972Z",
-     "shell.execute_reply": "2022-03-15T17:54:56.991294Z",
-     "shell.execute_reply.started": "2022-03-15T17:54:56.622361Z"
+     "iopub.execute_input": "2022-03-15T18:21:25.433825Z",
+     "iopub.status.busy": "2022-03-15T18:21:25.433444Z",
+     "iopub.status.idle": "2022-03-15T18:21:25.744270Z",
+     "shell.execute_reply": "2022-03-15T18:21:25.743713Z",
+     "shell.execute_reply.started": "2022-03-15T18:21:25.433799Z"
     }
    },
    "outputs": [
