--- a/tests/test_bootstrap.ipynb
+++ b/tests/test_bootstrap.ipynb
@@ -34,6 +34,7 @@
     "import pandas as pd\n",
     "from polyclonal import Polyclonal, PolyclonalCollection\n",
     "import polyclonal.polyclonal_collection as boot\n",
+    "import polyclonal.plot\n",
     "import numpy as np"
    ]
   },
