--- a/notebooks/RBD_bootstrap.ipynb
+++ b/notebooks/RBD_bootstrap.ipynb
@@ -34,11 +34,11 @@
    "id": "e243e290-8060-453d-ac3f-cb071681a22b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-15T18:19:08.144584Z",
-     "iopub.status.busy": "2022-03-15T18:19:08.144034Z",
-     "iopub.status.idle": "2022-03-15T18:19:10.122901Z",
-     "shell.execute_reply": "2022-03-15T18:19:10.122408Z",
-     "shell.execute_reply.started": "2022-03-15T18:19:08.144434Z"
+     "iopub.execute_input": "2022-03-17T02:33:47.704637Z",
+     "iopub.status.busy": "2022-03-17T02:33:47.704397Z",
+     "iopub.status.idle": "2022-03-17T02:33:49.333787Z",
+     "shell.execute_reply": "2022-03-17T02:33:49.332740Z",
+     "shell.execute_reply.started": "2022-03-17T02:33:47.704563Z"
     },
     "tags": []
    },
@@ -157,11 +157,11 @@
    "id": "4388c779-0811-426e-a095-8e7d1a08eff2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-15T18:19:10.125822Z",
-     "iopub.status.busy": "2022-03-15T18:19:10.125622Z",
-     "iopub.status.idle": "2022-03-15T18:19:12.736534Z",
-     "shell.execute_reply": "2022-03-15T18:19:12.733840Z",
-     "shell.execute_reply.started": "2022-03-15T18:19:10.125801Z"
+     "iopub.execute_input": "2022-03-17T02:33:49.337813Z",
+     "iopub.status.busy": "2022-03-17T02:33:49.337421Z",
+     "iopub.status.idle": "2022-03-17T02:33:51.828154Z",
+     "shell.execute_reply": "2022-03-17T02:33:51.826715Z",
+     "shell.execute_reply.started": "2022-03-17T02:33:49.337786Z"
     },
     "tags": []
    },
@@ -188,27 +188,37 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "088aa0ad-29cf-414d-9192-34aaffcaf115",
+   "id": "5006b868-7007-4b67-816f-8811ffca5a09",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-15T18:19:12.749623Z",
-     "iopub.status.busy": "2022-03-15T18:19:12.748905Z",
-     "iopub.status.idle": "2022-03-15T18:21:24.561672Z",
-     "shell.execute_reply": "2022-03-15T18:21:24.559515Z",
-     "shell.execute_reply.started": "2022-03-15T18:19:12.749403Z"
+     "iopub.execute_input": "2022-03-17T02:33:51.836193Z",
+     "iopub.status.busy": "2022-03-17T02:33:51.835838Z",
+     "iopub.status.idle": "2022-03-17T02:33:52.134776Z",
+     "shell.execute_reply": "2022-03-17T02:33:52.133965Z",
+     "shell.execute_reply.started": "2022-03-17T02:33:51.836152Z"
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting fitting bootstrap models at Tue Mar 15 11:19:12 2022\n",
-      "Fitting took 132 seconds, finished at Tue Mar 15 11:21:24 2022\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "with open(\"_temp_bootstrap_poly.pickle\", \"rb\") as f:\n",
+    "    # pickle.dump(bootstrap_poly, f)\n",
+    "    bootstrap_poly = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c854156-2b14-4956-9084-e06b784e77b3",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-03-16T23:49:22.469975Z",
+     "iopub.status.busy": "2022-03-16T23:49:22.469613Z",
+     "iopub.status.idle": "2022-03-16T23:51:30.846225Z",
+     "shell.execute_reply": "2022-03-16T23:51:30.845381Z",
+     "shell.execute_reply.started": "2022-03-16T23:49:22.469938Z"
+    },
+    "tags": []
+   },
    "source": [
     "# NBVAL_IGNORE_OUTPUT\n",
     "\n",
@@ -238,11 +248,11 @@
    "id": "3992ec56-9e80-40a8-a626-8de0fedf3625",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-15T18:21:24.567842Z",
-     "iopub.status.busy": "2022-03-15T18:21:24.567550Z",
-     "iopub.status.idle": "2022-03-15T18:21:24.592476Z",
-     "shell.execute_reply": "2022-03-15T18:21:24.591982Z",
-     "shell.execute_reply.started": "2022-03-15T18:21:24.567808Z"
+     "iopub.execute_input": "2022-03-17T02:33:52.138637Z",
+     "iopub.status.busy": "2022-03-17T02:33:52.138331Z",
+     "iopub.status.idle": "2022-03-17T02:33:52.164931Z",
+     "shell.execute_reply": "2022-03-17T02:33:52.164206Z",
+     "shell.execute_reply.started": "2022-03-17T02:33:52.138612Z"
     },
     "tags": []
    },
@@ -342,11 +352,11 @@
    "id": "3b0e02c8-91a5-4876-8970-6905a0f6533c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-15T18:21:24.595622Z",
-     "iopub.status.busy": "2022-03-15T18:21:24.595411Z",
-     "iopub.status.idle": "2022-03-15T18:21:24.618590Z",
-     "shell.execute_reply": "2022-03-15T18:21:24.618040Z",
-     "shell.execute_reply.started": "2022-03-15T18:21:24.595600Z"
+     "iopub.execute_input": "2022-03-17T02:33:52.169953Z",
+     "iopub.status.busy": "2022-03-17T02:33:52.169271Z",
+     "iopub.status.idle": "2022-03-17T02:33:52.208193Z",
+     "shell.execute_reply": "2022-03-17T02:33:52.207681Z",
+     "shell.execute_reply.started": "2022-03-17T02:33:52.169901Z"
     },
     "tags": []
    },
@@ -422,6 +432,103 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d2144618-6d5c-41d9-ab56-723c69a7a3b1",
+   "metadata": {},
+   "source": [
+    "We can plot the epitope activities summarized across replicates.\n",
+    "The dropdown allows you to choose the summary stat (mean, median), and the black lines indicate the standard deviation.\n",
+    "Mouse over for values:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "eb9dffca-0e26-4c33-86a1-87be82cc809a",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-03-17T02:33:52.211923Z",
+     "iopub.status.busy": "2022-03-17T02:33:52.211332Z",
+     "iopub.status.idle": "2022-03-17T02:33:52.447213Z",
+     "shell.execute_reply": "2022-03-17T02:33:52.446555Z",
+     "shell.execute_reply.started": "2022-03-17T02:33:52.211819Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<div id=\"altair-viz-4e562871337141a2849a7f66d456f1b1\"></div>\n",
+       "<script type=\"text/javascript\">\n",
+       "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
+       "  (function(spec, embedOpt){\n",
+       "    let outputDiv = document.currentScript.previousElementSibling;\n",
+       "    if (outputDiv.id !== \"altair-viz-4e562871337141a2849a7f66d456f1b1\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-4e562871337141a2849a7f66d456f1b1\");\n",
+       "    }\n",
+       "    const paths = {\n",
+       "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
+       "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
+       "      \"vega-lite\": \"https://cdn.jsdelivr.net/npm//vega-lite@4.17.0?noext\",\n",
+       "      \"vega-embed\": \"https://cdn.jsdelivr.net/npm//vega-embed@6?noext\",\n",
+       "    };\n",
+       "\n",
+       "    function maybeLoadScript(lib, version) {\n",
+       "      var key = `${lib.replace(\"-\", \"\")}_version`;\n",
+       "      return (VEGA_DEBUG[key] == version) ?\n",
+       "        Promise.resolve(paths[lib]) :\n",
+       "        new Promise(function(resolve, reject) {\n",
+       "          var s = document.createElement('script');\n",
+       "          document.getElementsByTagName(\"head\")[0].appendChild(s);\n",
+       "          s.async = true;\n",
+       "          s.onload = () => {\n",
+       "            VEGA_DEBUG[key] = version;\n",
+       "            return resolve(paths[lib]);\n",
+       "          };\n",
+       "          s.onerror = () => reject(`Error loading script: ${paths[lib]}`);\n",
+       "          s.src = paths[lib];\n",
+       "        });\n",
+       "    }\n",
+       "\n",
+       "    function showError(err) {\n",
+       "      outputDiv.innerHTML = `<div class=\"error\" style=\"color:red;\">${err}</div>`;\n",
+       "      throw err;\n",
+       "    }\n",
+       "\n",
+       "    function displayChart(vegaEmbed) {\n",
+       "      vegaEmbed(outputDiv, spec, embedOpt)\n",
+       "        .catch(err => showError(`Javascript Error: ${err.message}<br>This usually means there's a typo in your chart specification. See the javascript console for the full traceback.`));\n",
+       "    }\n",
+       "\n",
+       "    if(typeof define === \"function\" && define.amd) {\n",
+       "      requirejs.config({paths});\n",
+       "      require([\"vega-embed\"], displayChart, err => showError(`Error loading script: ${err.message}`));\n",
+       "    } else {\n",
+       "      maybeLoadScript(\"vega\", \"5\")\n",
+       "        .then(() => maybeLoadScript(\"vega-lite\", \"4.17.0\"))\n",
+       "        .then(() => maybeLoadScript(\"vega-embed\", \"6\"))\n",
+       "        .catch(showError)\n",
+       "        .then(() => displayChart(vegaEmbed));\n",
+       "    }\n",
+       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}, \"axis\": {\"grid\": false}}, \"layer\": [{\"mark\": {\"type\": \"bar\", \"size\": 18.75}, \"encoding\": {\"color\": {\"field\": \"epitope\", \"legend\": null, \"scale\": {\"domain\": [\"1\", \"2\", \"3\"], \"range\": [\"#1f77b4\", \"#ff7f0e\", \"#2ca02c\"]}, \"type\": \"nominal\"}, \"tooltip\": [{\"field\": \"epitope\", \"type\": \"nominal\"}, {\"field\": \"statistic\", \"type\": \"nominal\"}, {\"field\": \"activity\", \"format\": \".3g\", \"type\": \"quantitative\"}, {\"field\": \"std\", \"format\": \".3g\", \"type\": \"quantitative\"}], \"x\": {\"field\": \"activity\", \"title\": \"activity\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"epitope\", \"sort\": [\"1\", \"2\", \"3\"], \"type\": \"nominal\"}}, \"height\": {\"step\": 25}, \"selection\": {\"selector001\": {\"type\": \"single\", \"fields\": [\"statistic\"], \"init\": {\"statistic\": \"mean\"}, \"bind\": {\"input\": \"select\", \"options\": [\"mean\", \"median\"], \"name\": \"statistic\"}}}, \"width\": 110}, {\"mark\": {\"type\": \"rule\", \"size\": 2}, \"encoding\": {\"color\": {\"value\": \"black\"}, \"tooltip\": [{\"field\": \"epitope\", \"type\": \"nominal\"}, {\"field\": \"statistic\", \"type\": \"nominal\"}, {\"field\": \"activity\", \"format\": \".3g\", \"type\": \"quantitative\"}, {\"field\": \"std\", \"format\": \".3g\", \"type\": \"quantitative\"}], \"x\": {\"field\": \"_lower\", \"type\": \"quantitative\"}, \"x2\": {\"field\": \"_upper\"}, \"y\": {\"field\": \"epitope\", \"sort\": [\"1\", \"2\", \"3\"], \"type\": \"nominal\"}}, \"height\": {\"step\": 25}, \"width\": 110}], \"data\": {\"name\": \"data-707fe68e1c882bd726b44466812fe3ae\"}, \"transform\": [{\"filter\": {\"selection\": \"selector001\"}}], \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.17.0.json\", \"datasets\": {\"data-707fe68e1c882bd726b44466812fe3ae\": [{\"epitope\": \"1\", \"statistic\": \"mean\", \"activity\": 1.249178537744084, \"std\": 0.06754368710862395, \"_lower\": 1.1816348506354601, \"_upper\": 1.316722224852708}, {\"epitope\": \"1\", \"statistic\": \"median\", \"activity\": 1.2724938589112136, \"std\": 0.06754368710862395, \"_lower\": 1.2049501718025897, \"_upper\": 1.3400375460198375}, {\"epitope\": \"2\", \"statistic\": \"mean\", \"activity\": 3.178270841684546, \"std\": 0.027431638507795914, \"_lower\": 3.15083920317675, \"_upper\": 3.205702480192342}, {\"epitope\": \"2\", \"statistic\": \"median\", \"activity\": 3.1750536253609893, \"std\": 0.027431638507795914, \"_lower\": 3.1476219868531934, \"_upper\": 3.2024852638687853}, {\"epitope\": \"3\", \"statistic\": \"mean\", \"activity\": 1.9386842640455337, \"std\": 0.0590832346092836, \"_lower\": 1.8796010294362502, \"_upper\": 1.9977674986548173}, {\"epitope\": \"3\", \"statistic\": \"median\", \"activity\": 1.9396400280337733, \"std\": 0.0590832346092836, \"_lower\": 1.8805567934244898, \"_upper\": 1.9987232626430569}]}}, {\"mode\": \"vega-lite\"});\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "alt.LayerChart(...)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bootstrap_poly.activity_wt_barplot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e0c5acdc-409c-423c-b630-1b5fdb75526d",
    "metadata": {},
    "source": [
@@ -430,15 +537,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "0f9c74e6-54dd-422b-86ca-cf294df8b28a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-15T18:21:24.621594Z",
-     "iopub.status.busy": "2022-03-15T18:21:24.621306Z",
-     "iopub.status.idle": "2022-03-15T18:21:24.861066Z",
-     "shell.execute_reply": "2022-03-15T18:21:24.860298Z",
-     "shell.execute_reply.started": "2022-03-15T18:21:24.621467Z"
+     "iopub.execute_input": "2022-03-17T02:33:52.702107Z",
+     "iopub.status.busy": "2022-03-17T02:33:52.701739Z",
+     "iopub.status.idle": "2022-03-17T02:33:52.986660Z",
+     "shell.execute_reply": "2022-03-17T02:33:52.986020Z",
+     "shell.execute_reply.started": "2022-03-17T02:33:52.702071Z"
     },
     "tags": []
    },
@@ -537,7 +644,7 @@
        "4       1   331        N      G    N331G     2.2                    1"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,15 +665,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "9d4438ce-98b4-40de-b1c1-331e7b68e7a3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-15T18:21:24.865984Z",
-     "iopub.status.busy": "2022-03-15T18:21:24.865764Z",
-     "iopub.status.idle": "2022-03-15T18:21:25.118305Z",
-     "shell.execute_reply": "2022-03-15T18:21:25.117814Z",
-     "shell.execute_reply.started": "2022-03-15T18:21:24.865958Z"
+     "iopub.execute_input": "2022-03-17T02:33:52.989688Z",
+     "iopub.status.busy": "2022-03-17T02:33:52.989338Z",
+     "iopub.status.idle": "2022-03-17T02:33:53.267204Z",
+     "shell.execute_reply": "2022-03-17T02:33:53.266495Z",
+     "shell.execute_reply.started": "2022-03-17T02:33:52.989653Z"
     },
     "tags": []
    },
@@ -660,7 +767,7 @@
        "2                      10                        1.0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,15 +786,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "cefd6935-a4d1-436d-95ea-c20777ec10fc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-15T18:21:25.120561Z",
-     "iopub.status.busy": "2022-03-15T18:21:25.120395Z",
-     "iopub.status.idle": "2022-03-15T18:21:25.430913Z",
-     "shell.execute_reply": "2022-03-15T18:21:25.430436Z",
-     "shell.execute_reply.started": "2022-03-15T18:21:25.120542Z"
+     "iopub.execute_input": "2022-03-17T02:33:53.268561Z",
+     "iopub.status.busy": "2022-03-17T02:33:53.268249Z",
+     "iopub.status.idle": "2022-03-17T02:33:53.664502Z",
+     "shell.execute_reply": "2022-03-17T02:33:53.663953Z",
+     "shell.execute_reply.started": "2022-03-17T02:33:53.268529Z"
     },
     "tags": []
    },
@@ -805,7 +912,7 @@
        "4                    1  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,15 +933,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "f4385713-9c73-4ddc-af36-2fe402e4b136",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-03-15T18:21:25.433825Z",
-     "iopub.status.busy": "2022-03-15T18:21:25.433444Z",
-     "iopub.status.idle": "2022-03-15T18:21:25.744270Z",
-     "shell.execute_reply": "2022-03-15T18:21:25.743713Z",
-     "shell.execute_reply.started": "2022-03-15T18:21:25.433799Z"
+     "iopub.execute_input": "2022-03-17T02:33:53.665605Z",
+     "iopub.status.busy": "2022-03-17T02:33:53.665265Z",
+     "iopub.status.idle": "2022-03-17T02:33:54.083901Z",
+     "shell.execute_reply": "2022-03-17T02:33:54.083193Z",
+     "shell.execute_reply.started": "2022-03-17T02:33:53.665474Z"
     }
    },
    "outputs": [
@@ -945,7 +1052,7 @@
        "4                        1.0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
