--- a/optimization.ipynb
+++ b/optimization.ipynb
@@ -166,6 +166,27 @@
     "#### Calculating $\\frac{\\partial R_{\\rm{spread}}}{\\partial \\beta_{m,e}}$\n",
     "$$\\frac{\\partial R_{\\rm{spread}}}{\\partial \\beta_{m,e}} = \\frac{2\\lambda_{\\rm{spread}}}{M_i} \\left(\\beta_{m,e} - \\frac{1}{M_i} \\sum_{m' \\in i} \\beta_{m',e}\\right)$$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55966e74-705d-4073-a84a-dd559cd68a17",
+   "metadata": {},
+   "source": [
+    "## Bootstrapping\n",
+    "For the bootstrapping implemented by `PolyclonalCollection`, we start with a single pre-fit model to all the data.\n",
+    "We then draw bootstrap replicates of the data used to fit that model, by default sampling the same variants at each concentration (see `sample_by` option of `PolyclonalCollection`).\n",
+    "We then fit each of these bootstrapped models starting from the initial values from the pre-fit model on all of the data.\n",
+    "Finally, the fit parameters or predictions from the models are summarized.\n",
+    "Note that mutations may not be present in some bootstrap replicates if they are only in a few variants, and this can be assessed by looking at the `frac_boostrap_replicates` column in the output from `PolyclonalCollection`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11a6eb63-32fa-4e49-8faf-7b103c24e9ff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
