tests for `prob_escape` methods.

--- a/tests/test_bootstrap.ipynb
+++ b/tests/test_bootstrap.ipynb
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "c6185dc5-6d1a-4975-92b2-5cd7fd6c6b58",
    "metadata": {},
    "outputs": [],
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "191a9185-f1d3-4271-8116-fd0a47b788ba",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,7 @@
        "(5, 0)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,12 +260,12 @@
    "id": "67a3aefe-bb46-4853-9fd2-7cc9e8827260",
    "metadata": {},
    "source": [
-    "### Test predictions across all models"
+    "### Test neutralization concentration values (ICXX) and predictions for probability of escape across all models"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "1b73d334-a4f0-4dc6-b636-6c179930dd74",
    "metadata": {},
    "outputs": [],
@@ -275,6 +275,19 @@
     "ic90_replicates_df = pc.icXX_replicates(boot_df, x=0.9)\n",
     "assert len(ic90_replicates_df) == len(boot_df.drop_duplicates())\n",
     "assert len(ic90_df) == n_predictions_expected"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "5728896f-1b6d-4c01-85b1-59eff469e05e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preds_df = pc.prob_escape(boot_df).sort_values([\"aa_substitutions\", \"concentration\"])\n",
+    "preds_replicates_df = pc.prob_escape_replicates(boot_df)\n",
+    "assert len(preds_df) == n_predictions_expected\n",
+    "assert len(preds_replicates_df) == len(boot_df.drop_duplicates())"
    ]
   }
  ],
