adjusting tests to accomodate last changes in last commit.

--- a/tests/test_bootstrap.ipynb
+++ b/tests/test_bootstrap.ipynb
@@ -271,23 +271,23 @@
    "outputs": [],
    "source": [
     "n_predictions_expected = len(boot_df) * len([x for x in pc.models if x is not None])\n",
-    "ic90_df = pc.icXX(boot_df, x=0.9)\n",
+    "ic90_df = pc.icXX(boot_df, x=0.9, col=\"IC90\")\n",
     "ic90_replicates_df = pc.icXX_replicates(boot_df, x=0.9)\n",
-    "assert len(ic90_replicates_df) == len(boot_df.drop_duplicates())\n",
-    "assert len(ic90_df) == n_predictions_expected"
+    "assert len(ic90_replicates_df) == n_predictions_expected\n",
+    "assert len(ic90_df) == len(boot_df.drop_duplicates())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "5728896f-1b6d-4c01-85b1-59eff469e05e",
    "metadata": {},
    "outputs": [],
    "source": [
     "preds_df = pc.prob_escape(boot_df).sort_values([\"aa_substitutions\", \"concentration\"])\n",
     "preds_replicates_df = pc.prob_escape_replicates(boot_df)\n",
-    "assert len(preds_df) == n_predictions_expected\n",
-    "assert len(preds_replicates_df) == len(boot_df.drop_duplicates())"
+    "assert len(preds_replicates_df) == n_predictions_expected\n",
+    "assert len(preds_df) == len(boot_df.drop_duplicates())"
    ]
   }
  ],
