--- a/tests/test_bootstrap.ipynb
+++ b/tests/test_bootstrap.ipynb
@@ -20,15 +20,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "7f2bd96d-b693-4a82-856c-edf6a85ec89a",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-03-14T23:24:05.308745Z",
-     "iopub.status.busy": "2022-03-14T23:24:05.308142Z",
-     "iopub.status.idle": "2022-03-14T23:24:06.908009Z",
-     "shell.execute_reply": "2022-03-14T23:24:06.906925Z",
-     "shell.execute_reply.started": "2022-03-14T23:24:05.308652Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -53,15 +45,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "a212ce8e-b374-4cbb-9bd1-e6543972b4e6",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-03-14T23:24:06.911669Z",
-     "iopub.status.busy": "2022-03-14T23:24:06.911424Z",
-     "iopub.status.idle": "2022-03-14T23:24:06.984144Z",
-     "shell.execute_reply": "2022-03-14T23:24:06.983475Z",
-     "shell.execute_reply.started": "2022-03-14T23:24:06.911643Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "activity_wt_df = pd.DataFrame({\"epitope\": [\"1\", \"2\"], \"activity\": [2.0, 1.0]})\n",
@@ -109,7 +93,7 @@
     "    ),\n",
     "    data_mut_escape_overlap=\"fill_to_data\",\n",
     ")\n",
-    "\n",
+    "polyclonal_data.fit()\n",
     "# Now only use the first 30 elements to get rid of some mutations\n",
     "polyclonal_data2 = Polyclonal(\n",
     "    data_to_fit=data_to_fit.head(20),\n",
@@ -134,15 +118,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "a92c97a0-6447-4655-bdd6-49301f98f11b",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-03-14T23:24:06.988590Z",
-     "iopub.status.busy": "2022-03-14T23:24:06.988240Z",
-     "iopub.status.idle": "2022-03-14T23:24:06.997759Z",
-     "shell.execute_reply": "2022-03-14T23:24:06.997176Z",
-     "shell.execute_reply.started": "2022-03-14T23:24:06.988552Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "boot_df = boot.create_bootstrap_sample(data_to_fit)\n",
@@ -170,13 +146,6 @@
    "execution_count": 4,
    "id": "04a1937a-9241-4f24-91c5-b5513e042002",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-03-14T23:24:07.000394Z",
-     "iopub.status.busy": "2022-03-14T23:24:07.000254Z",
-     "iopub.status.idle": "2022-03-14T23:24:07.170059Z",
-     "shell.execute_reply": "2022-03-14T23:24:07.168948Z",
-     "shell.execute_reply.started": "2022-03-14T23:24:07.000375Z"
-    },
     "tags": []
    },
    "outputs": [],
@@ -212,13 +181,6 @@
    "execution_count": 5,
    "id": "3ce1356d-9c5d-4b83-85d1-c2c2cdd0b8fb",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-03-14T23:24:07.174139Z",
-     "iopub.status.busy": "2022-03-14T23:24:07.173853Z",
-     "iopub.status.idle": "2022-03-14T23:24:07.268911Z",
-     "shell.execute_reply": "2022-03-14T23:24:07.267499Z",
-     "shell.execute_reply.started": "2022-03-14T23:24:07.174106Z"
-    },
     "tags": []
    },
    "outputs": [],
@@ -236,15 +198,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "781ad89f-9e61-4708-81d8-91fc89f2ed25",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-03-14T23:24:07.273489Z",
-     "iopub.status.busy": "2022-03-14T23:24:07.273238Z",
-     "iopub.status.idle": "2022-03-14T23:24:07.371543Z",
-     "shell.execute_reply": "2022-03-14T23:24:07.370401Z",
-     "shell.execute_reply.started": "2022-03-14T23:24:07.273458Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# What if we use the same seed with multiple threads?\n",
@@ -268,15 +222,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "c6185dc5-6d1a-4975-92b2-5cd7fd6c6b58",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-03-14T23:24:07.375212Z",
-     "iopub.status.busy": "2022-03-14T23:24:07.374989Z",
-     "iopub.status.idle": "2022-03-14T23:24:07.658218Z",
-     "shell.execute_reply": "2022-03-14T23:24:07.657462Z",
-     "shell.execute_reply.started": "2022-03-14T23:24:07.375186Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Test to ensure that parameters change during fitting.\n",
@@ -291,15 +237,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "191a9185-f1d3-4271-8116-fd0a47b788ba",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-03-14T23:24:07.661260Z",
-     "iopub.status.busy": "2022-03-14T23:24:07.661125Z",
-     "iopub.status.idle": "2022-03-14T23:24:08.191505Z",
-     "shell.execute_reply": "2022-03-14T23:24:08.190918Z",
-     "shell.execute_reply.started": "2022-03-14T23:24:07.661242Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -322,163 +260,34 @@
    "id": "67a3aefe-bb46-4853-9fd2-7cc9e8827260",
    "metadata": {},
    "source": [
-    "### Test predictions across all models"
+    "### Test neutralization concentration values (ICXX) and predictions for probability of escape across all models"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7ec43240-d74a-49d8-97e4-1e45e45923df",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-03-14T23:24:08.194284Z",
-     "iopub.status.busy": "2022-03-14T23:24:08.194108Z",
-     "iopub.status.idle": "2022-03-14T23:24:08.264360Z",
-     "shell.execute_reply": "2022-03-14T23:24:08.263437Z",
-     "shell.execute_reply.started": "2022-03-14T23:24:08.194265Z"
-    }
-   },
+   "id": "1b73d334-a4f0-4dc6-b636-6c179930dd74",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a list of prediction dataframes from bootstrapped models\n",
-    "test_list = pc.make_predictions(variants_df=boot_df)\n",
-    "\n",
-    "# Make sure we got the same number of predictions for every model\n",
-    "for result in test_list:\n",
-    "    assert len(result) == len(boot_df)\n",
-    "    assert not (result.shape[1]) == (boot_df.shape[1])"
+    "n_predictions_expected = len(boot_df) * len([x for x in pc.models if x is not None])\n",
+    "ic90_df = pc.icXX(boot_df, x=0.9, col=\"IC90\")\n",
+    "ic90_replicates_df = pc.icXX_replicates(boot_df, x=0.9)\n",
+    "assert len(ic90_replicates_df) == n_predictions_expected\n",
+    "assert len(ic90_df) == len(boot_df.drop_duplicates())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "55c4be49-be98-425b-877f-8ae37153f8fd",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-03-14T23:24:08.268881Z",
-     "iopub.status.busy": "2022-03-14T23:24:08.268578Z",
-     "iopub.status.idle": "2022-03-14T23:24:08.286036Z",
-     "shell.execute_reply": "2022-03-14T23:24:08.285459Z",
-     "shell.execute_reply.started": "2022-03-14T23:24:08.268846Z"
-    }
-   },
+   "id": "5728896f-1b6d-4c01-85b1-59eff469e05e",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Aggregate the results\n",
-    "agg_results = pc.summarize_bootstraped_predictions(test_list)\n",
-    "assert len(test_list[0]) != len(agg_results)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "531e5a41-27a7-4f9c-8336-1eeb10348bfb",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "## Test aggregation results"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a526063f-e8b3-43f1-8370-80f2a9e5390a",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "### Test summary validity"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "7d7aa1b9-8d47-4c27-bb9d-f72c109580e6",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-03-14T23:24:08.287062Z",
-     "iopub.status.busy": "2022-03-14T23:24:08.286824Z",
-     "iopub.status.idle": "2022-03-14T23:24:08.291192Z",
-     "shell.execute_reply": "2022-03-14T23:24:08.290628Z",
-     "shell.execute_reply.started": "2022-03-14T23:24:08.287043Z"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Ensure center summary stats are still probabilities\n",
-    "assert agg_results.mean_predicted_prob_escape.between(0, 1).all()\n",
-    "assert agg_results.median_predicted_prob_escape.between(0, 1).all()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "b1b41bb6-7443-42ba-9e6e-dd701a2f1349",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-03-14T23:24:08.292119Z",
-     "iopub.status.busy": "2022-03-14T23:24:08.291893Z",
-     "iopub.status.idle": "2022-03-14T23:24:08.376162Z",
-     "shell.execute_reply": "2022-03-14T23:24:08.375249Z",
-     "shell.execute_reply.started": "2022-03-14T23:24:08.292100Z"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "test_list_copy = pc_copy.make_predictions(variants_df=boot_df)\n",
-    "agg_results_copy = pc_copy.summarize_bootstraped_predictions(test_list_copy)\n",
-    "assert agg_results.equals(agg_results_copy)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "8862a4d5-5e9b-4f09-be89-de5702805e18",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-03-14T23:24:08.377658Z",
-     "iopub.status.busy": "2022-03-14T23:24:08.377375Z",
-     "iopub.status.idle": "2022-03-14T23:24:08.922411Z",
-     "shell.execute_reply": "2022-03-14T23:24:08.921948Z",
-     "shell.execute_reply.started": "2022-03-14T23:24:08.377637Z"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(5, 0)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Test that different seeds result in differnt results\n",
-    "pc2.fit_models(fit_site_level_first=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "7d9b5395-f683-415c-9661-31afc3c7b6b8",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-03-14T23:24:08.923803Z",
-     "iopub.status.busy": "2022-03-14T23:24:08.923520Z",
-     "iopub.status.idle": "2022-03-14T23:24:08.989582Z",
-     "shell.execute_reply": "2022-03-14T23:24:08.988876Z",
-     "shell.execute_reply.started": "2022-03-14T23:24:08.923785Z"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "test_list_2 = pc2.make_predictions(variants_df=boot_df)"
+    "preds_df = pc.prob_escape(boot_df).sort_values([\"aa_substitutions\", \"concentration\"])\n",
+    "preds_replicates_df = pc.prob_escape_replicates(boot_df)\n",
+    "assert len(preds_replicates_df) == n_predictions_expected\n",
+    "assert len(preds_df) == len(boot_df.drop_duplicates())"
    ]
   }
  ],
