fix `black` formatting

--- a/notebooks/RBD_bootstrap.ipynb
+++ b/notebooks/RBD_bootstrap.ipynb
@@ -1315,7 +1315,9 @@
    ],
    "source": [
     "# NBVAL_IGNORE_OUTPUT\n",
-    "bootstrap_poly.mut_escape_lineplot(mut_escape_site_summary_df_kwargs={\"min_times_seen\": 2})"
+    "bootstrap_poly.mut_escape_lineplot(\n",
+    "    mut_escape_site_summary_df_kwargs={\"min_times_seen\": 2}\n",
+    ")"
    ]
   },
   {
